--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,35 @@
 name: arfa_links
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_gen: ^5.3.2
+  flutter_hooks: ^0.20.3
+  google_fonts: ^6.1.0
+  hooks_riverpod: ^2.4.8
+  line_icons: ^2.0.3
+  riverpod_annotation: ^2.3.2
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  custom_lint: ^0.5.7
+  flutter_gen_runner: ^5.3.2
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  riverpod_generator: ^2.3.8
+  riverpod_lint: ^2.3.6
+
+flutter_gen:
+  output: lib/src/assets
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
